--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
+<link rel="stylesheet" type="text/css" href="recipe.css"/>
 <h1>Shakshuka</h1>
 <h2>Best Shakshuka Recipe</h2>
-
+<br>
 <ul>
 	<li>1 tbsp olive oil</li>
 	<li>1 medium onion, diced</li>
@@ -24,20 +25,20 @@
 	<li>1–2 tbsp freshly chopped parsley</li>
 	<li>fresh black pepper, to taste</li>
 </ul>
-
+<br>
 <ol>
 	<li>Heat up oil in a 10 inch cast-iron (ideal) or large skillet over med-high heat.</li>
 	<li>Sauté onions for 3-5 mins or until translucent.</li>
 	<li>Add in garlic and cook for 1 minute.</li>
-	<li>Add diced tomatoes and spices and bring to a boil then let simmer for about 5 mins or until broth has thickened.</li>
+	<li>Add diced tomatoes and spices and bring to a boil then let simmer for <br>about 5 mins or until broth has thickened.</li>
 	<li>Create 5 small “wells” for the eggs and crack eggs directly into wells. There should be 4 around the edges and 1 in the middle.</li>
 	<li>Cover with a lid, if available or lightly with tin foil and let cook for about 10 mins for over-easy eggs or longer for more well done. Watch closely until desired egg consistency has been reached as each pan/stove top is different.</li>
 	<li>Top with fresh parsley and black pepper. Optional to top with feta or goat’s cheese.</li>
 	<li>Serve immediately with fresh bread or pita for dipping.</li>
 </ol>
-
+<br>
 <p>I like this recipe because it is an ideal healthy and tasty breakfast plus it is easy to make.</p>
-
+<br>
 <a href="https://www.thehealthymaven.com/explore-recipes//">Free Recipes</a>
 </body>
 </html>
